# check-conflict-serializability-using-precedence-graph

./: CMakeLists.txt  README.md  scr.cpp
cpp_components/include/: interface.hpp
cpp_components/input/: inputfile.txt
cpp_components/libs/: CMakeLists.txt
cpp_components/libs/data_operations/include/: data_operations.hpp
cpp_components/libs/data_operations/src/: data_operations.cpp
libs/data_operations/: CMakeLists.txt
src/: interface.cpp
